--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="item">
-                <a href = "#"><img src="pigeon.png" width="200px" height="200px"></a>
+                <a href = "http://origami.me/pigeon/"><img src="pigeon.png" width="200px" height="200px"></a>
                 <h3><b><u> Pigeons</u> </b></h3>
                 <b><p style="color:hsla(207, 95%, 50%, 0.932)";>
                     <i>Interesting Facts about Pigeons</i></p></b>
@@ -79,7 +79,7 @@
             </div>
         
             <div class="item">
-                <a href = "#"><img src="camel.png" width="200px" height="200px"></a>
+                <a href = "http://origami.me/camel/"><img src="camel.png" width="200px" height="200px"></a>
                 <h3><b><u>Camels</u></b></h3>
                 <b><p style="color:#a409f2";><i>Interesting Facts about Camels</i></p></b>
                 <p>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="item">
-            <a href = "#"><img src="panda.png" width="200px" height="200px"></a>
+            <a href = "http://origami.me/panda/"><img src="panda.png" width="200px" height="200px"></a>
             <h3><b><u>Pandas</u></b></h3>
             <b><p style="color:#2eaa0b";><i>Interesting Facts about Pandas</i></p></b>
             <p>
